Table Warehouses {
warehouse_id integer [pk]
name text
address text
phone text
}

Table Customers {
customer_id integer [pk]
name text
phone text
address text
email text
}

Table Vehicles {
vehicle_id integer [pk]
registration_number text
capacity real
status text
last_maintenance date
}

Table Drivers {
driver_id integer [pk]
name text
phone text
license_number text
status text
}

Table Shipments {
shipment_id integer [pk]
order_number text
sender_id integer
receiver_id integer
description text
cost real
status text
warehouse_id integer
created_date date
}

Table Deliveries {
delivery_id integer [pk]
shipment_id integer
vehicle_id integer
driver_id integer
route_info text
delivery_date date
delivery_status text
}

Table Inventory {
inventory_id integer [pk]
warehouse_id integer
item_name text
quantity integer
reorder_level integer
}

Table Users {
user_id integer [pk]
username text
password_hash text
role text
}

Table AuditLog {
log_id integer [pk]
user_id integer
action text
table_name text
timestamp datetime
}

Ref: Shipments.sender_id > Customers.customer_id
Ref: Shipments.receiver_id > Customers.customer_id
Ref: Shipments.warehouse_id > Warehouses.warehouse_id
Ref: Deliveries.shipment_id > Shipments.shipment_id
Ref: Deliveries.vehicle_id > Vehicles.vehicle_id
Ref: Deliveries.driver_id > Drivers.driver_id
Ref: Inventory.warehouse_id > Warehouses.warehouse_id
Ref: AuditLog.user_id > Users.user_id